--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
   --darkbackground: #1a1a1a;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   width: 95%;
   min-height: 100vh;
@@ -48,6 +52,11 @@ body {
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+img {
+  width: 0px;
+  height: 0px;
 }
 
 /* dark mode */
@@ -141,9 +150,37 @@ body {
   border: 1px solid var(--red);
 }
 
+.dark .sidebar {
+  background-color: #3a3a3a;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.dark .close-sidebar-btn {
+  color: var(--blue);
+}
+
+.dark .menu-btn {
+  color: var(--blue);
+}
+
+.dark .menu-btn:hover {
+  color: var(--darkBlue);
+}
+
+.dark .setup-container {
+  background-color: #2a2a2a;
+}
+
+.dark .setup-input:focus:hover {
+  border-color: var(--orange);
+}
+
 /* alert box */
 
-.alert-box {
+.alert-box,
+.piggy-alertbox,
+.name-alertbox,
+.money-alertbox {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
@@ -154,6 +191,65 @@ body {
   top: 0;
 
   z-index: 100;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  width: 80%;
+  min-height: 10vh;
+}
+
+.new-goalName-input,
+.new-goalMoney-input {
+  width: 256px;
+}
+
+.new-goalName-input:focus,
+.new-goalMoney-input:focus {
+  border: 1px solid var(--orange);
+}
+
+.new-goalName-input:focus:hover,
+.new-goalMoney-input:focus:hover {
+  border: 1px solid var(--orange);
+}
+
+.piggy-no-btn {
+  background-color: rgba(255, 0, 0, 0.7);
+}
+
+.piggy-no-btn:hover {
+  background-color: rgb(255, 0, 0);
+  cursor: pointer;
+}
+
+.piggy-yes-btn,
+.name-yes-btn,
+.money-yes-btn {
+  background-color: #1bb77877;
+}
+
+.piggy-yes-btn:hover,
+.name-yes-btn:hover,
+.money-yes-btn:hover {
+  background-color: var(--pastelgreen);
+  cursor: pointer;
+}
+
+.box-btn {
+  width: 96px;
+  height: 48px;
+
+  margin-left: 8px;
+  margin-right: 8px;
 
   display: flex;
   justify-content: center;
@@ -181,31 +277,41 @@ body {
   justify-content: flex-end;
 }
 
+.box-text {
+  font-weight: 100;
+  margin-bottom: 8px;
+}
+
 .box-title {
   width: 80%;
   min-height: 16vh;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
   font-size: 24px;
 }
 
-.close-box-btn {
+.close-box-btn,
+.close-piggybox-btn,
+.close-namebox-btn,
+.close-moneybox-btn {
   font-size: 30px;
   color: var(--red);
-
-  transition: 500ms;
 }
 
 .flag {
   margin-left: 12px;
 }
 
-.close-box-btn:hover {
+.close-box-btn:hover,
+.close-piggybox-btn:hover,
+.close-namebox-btn:hover,
+.close-moneybox-btn:hover {
   cursor: pointer;
-  transform: rotate(360deg);
+  transform: scale(1.3);
   color: var(--blue);
 }
 
@@ -215,7 +321,7 @@ body {
   background-color: var(--mainBackground);
   border-radius: 8px;
 
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -409,23 +515,19 @@ input::placeholder {
 /* switch theme */
 
 .switch-box {
-  width: 192px;
+  width: 100%;
   height: 64px;
 
   background-color: var(--background2);
-  border-radius: 8px;
 
   display: flex;
   flex-direction: row;
-
-  position: fixed;
-  right: 5%;
-  bottom: 3%;
 }
 
 .side {
-  width: 96px;
+  width: 50%;
   height: 64px;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -434,56 +536,391 @@ input::placeholder {
   transition: 500ms;
 }
 
-.toggle-btn {
-  width: 96px;
-  height: 64px;
-
-  margin-left: 96px;
-
-  transition: 500ms;
-
-  position: fixed;
-  background-color: var(--blue);
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-}
-
 .side:hover {
   background-color: var(--lightBlue);
   cursor: pointer;
 }
 
-.dark-side {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-}
-
 .light-side {
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-
-  background-color: #1a1a1a;
+  background-color: var(--lightBlue);
   color: white;
 }
 
 .dark-side:hover {
-  background-color: rgb(0, 45, 160);
+  background-color: rgb(43, 43, 43);
 }
 
-.slideToLeft {
-  margin-left: 0px;
-
-  border-radius: 0;
-
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+.de-active {
+  background-color: var(--darkbackground);
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.slideToRight {
-  margin-left: 96px;
+.de-active:hover {
+  background-color: rgba(0, 204, 255, 0.4);
+  color: white;
+}
 
-  border-radius: 0;
+.dark-side {
+  color: black;
+}
 
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+.dark-active {
+  color: var(--orange);
+  background-color: black;
+}
+
+.dark-active:hover {
+  background-color: black;
+}
+
+.btt-btn {
+  width: 64px;
+  height: 64px;
+
+  position: fixed;
+  left: 5%;
+  bottom: 3%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  visibility: hidden;
+
+  border-radius: 50%;
+
+  background-color: var(--background);
+  font-size: 20px;
+
+  animation: bttAnimation 2s ease-in-out infinite;
+}
+
+.dark .btt-btn {
+  background-color: #1a1a1a;
+}
+
+.dark .btt-btn:hover {
+  background-color: #1a1a1a66;
+}
+
+.btt-btn:hover {
+  background-color: white;
+  cursor: pointer;
+}
+
+/* responsive */
+@media only screen and (max-width: 1000px) {
+  .item-name {
+    font-size: 14px;
+  }
+
+  .item-price {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .list {
+    width: 80%;
+  }
+
+  .switch-box {
+    width: 128px;
+    height: 48px;
+  }
+
+  .side {
+    width: 64px;
+    height: 48px;
+
+    font-size: 20px;
+  }
+
+  .toggle-btn {
+    width: 64px;
+    height: 48px;
+  }
+
+  .slideToRight {
+    margin-left: 64px;
+  }
+
+  .header {
+    font-size: 24px;
+  }
+}
+
+@keyframes bttAnimation {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.15);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* setup */
+
+.setup {
+  width: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.setup-container {
+  width: 80%;
+  min-height: 70vh;
+  background-color: var(--mainBackground);
+
+  border-radius: 4px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.setup-title {
+  font-size: 48px;
+  font-weight: 200;
+
+  margin-bottom: 36px;
+}
+
+.goal-name-btn,
+.goal-price-btn {
+  width: 256px;
+  padding: 8px;
+  height: 32px;
+  background-color: rgba(255, 196, 0, 0.6);
+
+  font-weight: 100;
+
+  margin-top: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: 500ms;
+
+  color: var(--mainBackground);
+}
+
+.goal-name-btn:hover,
+.goal-price-btn:hover {
+  color: var(--background2);
+  cursor: pointer;
+  background-color: var(--orange);
+}
+
+.setup-active {
+  color: var(--background2);
+  cursor: not-allowed;
+  pointer-events: none;
+  background-color: var(--orange);
+}
+
+.setup-active:hover {
+  color: var(--background2);
+  cursor: not-allowed;
+  pointer-events: none;
+  background-color: var(--orange);
+}
+
+.setup-forms {
+  display: flex;
+  flex-direction: row;
+}
+
+.setup-form {
+  width: 256px;
+  height: 96px;
+
+  margin-left: 24px;
+  margin-right: 24px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.setup-input {
+  width: 256px;
+
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.setup-input:focus {
+  border: 1px solid var(--orange);
+}
+
+.reset-btn {
+  width: 96px;
+  height: 24px;
+
+  padding: 8px;
+
+  border-radius: 4px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 16px;
+
+  background-color: #ff463177;
+  color: var(--mainBackground);
+
+  transition: 500ms;
+}
+
+.reset-btn:hover {
+  color: black;
+  background-color: var(--red);
+  cursor: pointer;
+}
+
+.setup-footer {
+  width: 100%;
+  min-height: 10vh;
+
+  margin-top: 24px;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 0;
+}
+
+.next-btn {
+  width: 96px;
+  height: 10vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(255, 196, 0, 0.6);
+
+  transition: 500ms;
+
+  font-weight: 100;
+
+  color: var(--mainBackground);
+}
+
+.next-btn:hover {
+  background-color: var(--orange);
+  cursor: pointer;
+  color: var(--background2);
+}
+
+.setup-input-active {
+  pointer-events: none;
+
+  border-bottom: 1px solid var(--orange);
+}
+
+.menu {
+  min-height: 90vh;
+
+  font-size: 24px;
+}
+
+.menu-btn {
+  color: var(--lightBlue);
+
+  transition: 250ms;
+}
+
+.menu-btn:hover {
+  cursor: pointer;
+  color: var(--blue);
+  transform: rotate(90deg);
+}
+
+.menu-header {
+  width: 100%;
+  min-height: 10vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+/* sidebar */
+
+.sidebar {
+  width: 316px;
+  height: 95vh;
+
+  position: fixed;
+  border-left: 1px solid var(--darkbackground);
+  top: 2.5vh;
+  right: -512px;
+
+  transition: 750ms;
+
+  background-color: var(--background);
+}
+
+.show-sidebar {
+  right: 0;
+  transition: 750ms;
+}
+
+.sidebar-header {
+  min-height: 10vh;
+  display: flex;
+  align-items: center;
+
+  font-size: 24px;
+}
+
+.close-sidebar-btn {
+  color: var(--lightBlue);
+  margin-left: 36px;
+
+  transition: 500ms;
+}
+
+.close-sidebar-btn:hover {
+  cursor: pointer;
+
+  color: var(--red);
+  transform: rotate(360deg);
+}
+
+.sidebar-item {
+  width: 100%;
+  min-height: 10vh;
+
+  display: flex;
+  align-items: center;
+}
+
+.sidebar-item:hover {
+  cursor: pointer;
+  background-color: rgb(255, 0, 0);
+  color: var(--mainBackground);
+}
+
+.sidebar-item-text {
+  margin-left: 48px;
 }
